# mabman

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
bandit/: __init__.py  agents.py  arm.py  arms.py  bandits.py  callbacks.py  checkpoint.py  duels.py  process.py  states.py  util.py  utils.py
bandit/agents/: __init__.py  adversarial.py  base.py  bayesian.py  contextual.py  dueling.py  epsilon.py  hedge.py  naive.py  simple.py  softmax.py  thompson.py  ucb.py  vdbe.py
bandit/utils/: __init__.py  checkpoint.py  policy.py  util.py
tests/: context.py  test_agents.py  test_arms.py  test_process.py
utils/: checkpoint.py
