[metadata]
name = mabman
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mEskintoch/mabman
author = Mustafa Samed Eskin
author_email = mustafasamedeskin@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    numpy

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 1